kubernetes-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: cloud-config
  namespace: wmkang
spec:
  type: ClusterIP
  selector:
    app: cloud-config
  ports:
    - name: http
      port: 9001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-config
  namespace: wmkang
  labels:
    app: cloud-config
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-config
  template:
    metadata:
      labels:
        app: cloud-config
    spec:
      containers:
      - name: cloud-config
        image: asia.gcr.io/magnetic-tenure-269711/cloud-config
        ports:
        - containerPort: 9001
          name: http
        readinessProbe:
          httpGet:
            path: /task/open/user/
            port: 9001
          initialDelaySeconds: 2
          timeoutSeconds: 2
          periodSeconds: 2
          failureThreshold : 10


---
apiVersion: v1
kind: Service
metadata:
  name: cloud-eureka
  namespace: wmkang
spec:
  type: ClusterIP
  selector:
    app: cloud-eureka
  ports:
    - name: http
      port: 9002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-eureka
  namespace: wmkang
  labels:
    app: cloud-eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-eureka
  template:
    metadata:
      labels:
        app: cloud-eureka
    spec:
      containers:
      - name: cloud-eureka
        image: asia.gcr.io/magnetic-tenure-269711/cloud-eureka
        ports:
        - containerPort: 9002
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: 9002
          initialDelaySeconds: 4
          timeoutSeconds: 2
          periodSeconds: 2
          failureThreshold : 10


---
apiVersion: v1
kind: Service
metadata:
  name: cloud-gateway
  namespace: wmkang
spec:
  type: NodePort
  selector:
    app: cloud-gateway
  ports:
    - name: http
      port: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-gateway
  namespace: wmkang
  labels:
    app: cloud-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-gateway
  template:
    metadata:
      labels:
        app: cloud-gateway
    spec:
      containers:
      - name: cloud-gateway
        image: asia.gcr.io/magnetic-tenure-269711/cloud-gateway
        ports:
        - containerPort: 8000
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 4
          timeoutSeconds: 2
          periodSeconds: 2
          failureThreshold : 10


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-task
  namespace: wmkang
  labels:
    app: svc-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-task
  template:
    metadata:
      labels:
        app: svc-task
    spec:
      containers:
      - name: svc-task
        image: asia.gcr.io/magnetic-tenure-269711/svc-task
        ports:
        - containerPort: 8001
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: 8001
          initialDelaySeconds: 15
          timeoutSeconds: 2
          periodSeconds: 3
          failureThreshold : 100
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - svc-task
            topologyKey: "kubernetes.io/hostname"


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: wmkang
  annotations:
#    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: cloud-gateway
          servicePort: 8000
