kubernetes-front.yml
apiVersion: v1
kind: Service
metadata:
  name: front-task
  namespace: wmkang
spec:
  type: NodePort
  selector:
    app: front-task
  ports:
  ports:
    - name: http
      port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-task
  namespace: wmkang
  labels:
    app: front-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-task
  template:
    metadata:
      labels:
        app: front-task
    spec:
      containers:
      - name: front-task
        image: asia.gcr.io/magnetic-tenure-269711/front-task
        stdin: true
        tty: true
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 4
          timeoutSeconds: 2
          periodSeconds: 2
          failureThreshold: 10
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - front-task
            topologyKey: "kubernetes.io/hostname"


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-task-ingress
  namespace: wmkang
  annotations:
#    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: front-task
          servicePort: 3000
